--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "thirdparty/eigen"]
 	path = thirdparty/eigen
 	url = https://gitlab.com/libeigen/eigen.git
+[submodule "thirdparty/asmjit"]
+	path = thirdparty/asmjit
+	url = git@github.com:asmjit/asmjit.git
+[submodule "thirdparty/blend2d"]
+	path = thirdparty/blend2d
+	url = git@github.com:blend2d/blend2d.git
